--- a/SocialNetwork/SocialNetwork.Client/SocialNetworkStyles.axaml
+++ b/SocialNetwork/SocialNetwork.Client/SocialNetworkStyles.axaml
@@ -13,4 +13,9 @@
 	<Style Selector="Grid.MainGrid">
 		<Setter Property="Margin" Value="8"/>
 	</Style>
+
+	<Style Selector="TextBox.GroupBox">
+		<Setter Property="Width" Value="30"/>
+		<Setter Property="Height" Value="30"/>
+	</Style>
 </Styles>
