--- a/SocialNetwork/SocialNetwork.Client/Views/MainWindow.axaml
+++ b/SocialNetwork/SocialNetwork.Client/Views/MainWindow.axaml
@@ -7,16 +7,65 @@
 		<StyleInclude Source="/SocialNetworkStyles.axaml"/>
 	</Window.Styles>
 	
-	<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, *">
 		<StackPanel Grid.Row="0" Orientation="Horizontal">
-			<Button>Добавить</Button>
-			<Button>Редактировать</Button>
-			<Button>Удалить</Button>
+			<Button Command="{Binding OnAddGroupCommand}">Добавить</Button>
+			<Button Command="{Binding OnChangeGroupCommand}">Редактировать</Button>
+			<Button Command="{Binding OnDeleteGroupCommand}">Удалить</Button>
 		</StackPanel>
-		<DataGrid Grid.Row="1" AutoGenerateColumns="True" 
-				  Items="{Binding Groups}">
+
+		<DataGrid Grid.Row="1" AutoGenerateColumns="False" Items="{Binding Groups}"
+				SelectedItem="{Binding SelectedGroup}">
 			<DataGrid.Columns>
-				<DataGridTextColumn Header="Наименование"/>
+				<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
+				<DataGridTextColumn Header="Описание" Binding="{Binding Description}"/>
+				<DataGridTextColumn Header="Дата создания" Binding="{Binding CreationDate}"/>
+				<DataGridTextColumn Header="Идентификатор создателя" Binding="{Binding UserId}"/>
+			</DataGrid.Columns>
+		</DataGrid>
+
+		<StackPanel Grid.Row="2" Orientation="Horizontal">
+			<Button Command="{Binding OnAddNoteCommand}">Добавить</Button>
+			<Button Command="{Binding OnChangeNoteCommand}">Редактировать</Button>
+			<Button Command="{Binding OnDeleteNoteCommand}">Удалить</Button>
+		</StackPanel>
+			
+		<DataGrid Grid.Row="3" AutoGenerateColumns="False" Items="{Binding Notes}">
+			<DataGrid.Columns>
+				<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
+				<DataGridTextColumn Header="Описание" Binding="{Binding Description}"/>
+				<DataGridTextColumn Header="Дата создания" Binding="{Binding CreationDate}"/>
+				<DataGridTextColumn Header="Идентификатор создателя" Binding="{Binding UserId}"/>
+				<DataGridTextColumn Header="Идентификатор группы" Binding="{Binding GroupId}"/>
+			</DataGrid.Columns>
+		</DataGrid>
+
+		<StackPanel Grid.Row="4" Orientation="Horizontal">
+			<Button Command="{Binding OnAddRoleCommand}">Добавить</Button>
+			<Button Command="{Binding OnChangeRoleCommand}">Редактировать</Button>
+			<Button Command="{Binding OnDeleteRoleCommand}">Удалить</Button>
+		</StackPanel>
+
+		<DataGrid Grid.Row="5" AutoGenerateColumns="False" Items="{Binding Roles}">
+			<DataGrid.Columns>
+				<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
+			</DataGrid.Columns>
+		</DataGrid>
+
+		<StackPanel Grid.Row="6" Orientation="Horizontal">
+			<Button Command="{Binding OnAddUserCommand}">Добавить</Button>
+			<Button Command="{Binding OnChangeUserCommand}">Редактировать</Button>
+			<Button Command="{Binding OnDeleteUserCommand}">Удалить</Button>
+		</StackPanel>
+
+		<DataGrid Grid.Row="7" AutoGenerateColumns="False" Items="{Binding Users}">
+			<DataGrid.Columns>
+				<DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}"/>
+				<DataGridTextColumn Header="Имя" Binding="{Binding FirstName}"/>
+				<DataGridTextColumn Header="Отчество" Binding="{Binding Patronymic}"/>
+				<DataGridTextColumn Header="Пол" Binding="{Binding Gender}"/>
+				<DataGridTextColumn Header="Дата рождения" Binding="{Binding BirthDate}"/>
+				<DataGridTextColumn Header="Дата регистрации" Binding="{Binding RegistrationDate}"/>
 			</DataGrid.Columns>
 		</DataGrid>
 	</Grid>
