--- a/SocialNetwork/SocialNetwork.Client/SocialNetworkStyles.axaml
+++ b/SocialNetwork/SocialNetwork.Client/SocialNetworkStyles.axaml
@@ -18,4 +18,8 @@
 		<Setter Property="Width" Value="30"/>
 		<Setter Property="Height" Value="30"/>
 	</Style>
+
+	<Style Selector="DataGrid.ResultTable">
+		<Setter Property="Margin" Value="0,10,0,10"/>
+	</Style>
 </Styles>
