--- a/SocialNetwork/SocialNetwork.Client/Views/MainWindow.axaml
+++ b/SocialNetwork/SocialNetwork.Client/Views/MainWindow.axaml
@@ -1,90 +1,95 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="SocialNetwork.Client.Views.MainWindow"
-        Title="SocialNetwork.Client">
+        Title="Социальная сеть">
 
 	<Window.Styles>
 		<StyleInclude Source="/SocialNetworkStyles.axaml"/>
 	</Window.Styles>
-	
-	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, *">
 
-		<StackPanel Grid.Row="0" Orientation="Vertical">
-			<Label>Группы</Label>
-			<StackPanel Grid.Row="0" Orientation="Horizontal">
-				<Button Command="{Binding OnAddGroupCommand}">Добавить</Button>
-				<Button Command="{Binding OnChangeGroupCommand}">Редактировать</Button>
-				<Button Command="{Binding OnDeleteGroupCommand}">Удалить</Button>
+	<ScrollViewer>
+		
+		<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, *">
+
+			<StackPanel Grid.Row="0" Orientation="Vertical">
+				<Label>Группы</Label>
+				<StackPanel Grid.Row="0" Orientation="Horizontal">
+					<Button Command="{Binding OnAddGroupCommand}">Добавить</Button>
+					<Button Command="{Binding OnChangeGroupCommand}">Редактировать</Button>
+					<Button Command="{Binding OnDeleteGroupCommand}">Удалить</Button>
+				</StackPanel>
+				<TextBlock Text="{Binding GroupExceptionValue}"></TextBlock>
 			</StackPanel>
-			<TextBlock Text="{Binding Value}"></TextBlock>
-		</StackPanel>
 
-		<DataGrid Classes="ResultTable" Grid.Row="1" AutoGenerateColumns="False" Items="{Binding Groups}"
-				SelectedItem="{Binding SelectedGroup}">
-			<DataGrid.Columns>
-				<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
-				<DataGridTextColumn Header="Описание" Binding="{Binding Description}"/>
-				<DataGridTextColumn Header="Дата создания" Binding="{Binding CreationDate}"/>
-				<DataGridTextColumn Header="Идентификатор создателя" Binding="{Binding UserId}"/>
-			</DataGrid.Columns>
-		</DataGrid>
+			<DataGrid Classes="ResultTable" Grid.Row="1" AutoGenerateColumns="False" Items="{Binding Groups}"
+					SelectedItem="{Binding SelectedGroup}">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
+					<DataGridTextColumn Header="Описание" Binding="{Binding Description}"/>
+					<DataGridTextColumn Header="Дата создания" Binding="{Binding CreationDate}"/>
+					<DataGridTextColumn Header="Идентификатор создателя" Binding="{Binding UserId}"/>
+				</DataGrid.Columns>
+			</DataGrid>
 
-		<StackPanel Grid.Row="2" Orientation="Vertical">
-			<Label>Записи</Label>
-		<StackPanel Orientation="Horizontal">
-				<Button Command="{Binding OnAddNoteCommand}">Добавить</Button>
-				<Button Command="{Binding OnChangeNoteCommand}">Редактировать</Button>
-				<Button Command="{Binding OnDeleteNoteCommand}">Удалить</Button>
-			</StackPanel>	
-		</StackPanel>
+			<StackPanel Grid.Row="2" Orientation="Vertical">
+				<Label>Записи</Label>
+				<StackPanel Orientation="Horizontal">
+					<Button Command="{Binding OnAddNoteCommand}">Добавить</Button>
+					<Button Command="{Binding OnChangeNoteCommand}">Редактировать</Button>
+					<Button Command="{Binding OnDeleteNoteCommand}">Удалить</Button>
+				</StackPanel>
+				<TextBlock Text="{Binding NoteExceptionValue}"></TextBlock>
+			</StackPanel>
 			
-		<DataGrid Classes="ResultTable" Grid.Row="3" AutoGenerateColumns="False" Items="{Binding Notes}"
-				  SelectedItem="{Binding SelectedNote}">
-			<DataGrid.Columns>
-				<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
-				<DataGridTextColumn Header="Описание" Binding="{Binding Description}"/>
-				<DataGridTextColumn Header="Дата создания" Binding="{Binding CreationDate}"/>
-				<DataGridTextColumn Header="Идентификатор создателя" Binding="{Binding UserId}"/>
-				<DataGridTextColumn Header="Идентификатор группы" Binding="{Binding GroupId}"/>
-			</DataGrid.Columns>
-		</DataGrid>
+			<DataGrid Classes="ResultTable" Grid.Row="3" AutoGenerateColumns="False" Items="{Binding Notes}"
+					  SelectedItem="{Binding SelectedNote}">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
+					<DataGridTextColumn Header="Описание" Binding="{Binding Description}"/>
+					<DataGridTextColumn Header="Дата создания" Binding="{Binding CreationDate}"/>
+					<DataGridTextColumn Header="Идентификатор создателя" Binding="{Binding UserId}"/>
+					<DataGridTextColumn Header="Идентификатор группы" Binding="{Binding GroupId}"/>
+				</DataGrid.Columns>
+			</DataGrid>
 
-		<StackPanel Grid.Row="4" Orientation="Vertical">
-			<Label>Роли</Label>
-			<StackPanel Orientation="Horizontal">
-				<Button Command="{Binding OnAddRoleCommand}">Добавить</Button>
-				<Button Command="{Binding OnChangeRoleCommand}">Редактировать</Button>
-				<Button Command="{Binding OnDeleteRoleCommand}">Удалить</Button>
+			<StackPanel Grid.Row="4" Orientation="Vertical">
+				<Label>Роли</Label>
+				<StackPanel Orientation="Horizontal">
+					<Button Command="{Binding OnAddRoleCommand}">Добавить</Button>
+					<Button Command="{Binding OnChangeRoleCommand}">Редактировать</Button>
+					<Button Command="{Binding OnDeleteRoleCommand}">Удалить</Button>
+				</StackPanel>
+				<TextBlock Text="{Binding RoleExceptionValue}"></TextBlock>
 			</StackPanel>
-		</StackPanel>
 
-		<DataGrid Classes="ResultTable" Grid.Row="5" AutoGenerateColumns="False" Items="{Binding Roles}"
-				  SelectedItem="{Binding SelectedRole}">
-			<DataGrid.Columns>
-				<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
-			</DataGrid.Columns>
-		</DataGrid>
+			<DataGrid Classes="ResultTable" Grid.Row="5" AutoGenerateColumns="False" Items="{Binding Roles}"
+					  SelectedItem="{Binding SelectedRole}">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
+				</DataGrid.Columns>
+			</DataGrid>
 
-		<StackPanel Grid.Row="6" Orientation="Vertical">
+			<StackPanel Grid.Row="6" Orientation="Vertical">
 
-			<StackPanel Orientation="Horizontal">
-				<Button Command="{Binding OnAddUserCommand}">Добавить</Button>
-				<Button Command="{Binding OnChangeUserCommand}">Редактировать</Button>
-				<Button Command="{Binding OnDeleteUserCommand}">Удалить</Button>
+				<StackPanel Orientation="Horizontal">
+					<Button Command="{Binding OnAddUserCommand}">Добавить</Button>
+					<Button Command="{Binding OnChangeUserCommand}">Редактировать</Button>
+					<Button Command="{Binding OnDeleteUserCommand}">Удалить</Button>
+				</StackPanel>
+				<TextBlock Text="{Binding UserExceptionValue}"></TextBlock>
 			</StackPanel>
-		</StackPanel>
 
-		<DataGrid Classes="ResultTable" Grid.Row="7" AutoGenerateColumns="False" Items="{Binding Users}"
-				  SelectedItem="{Binding SelectedUser}">
-			<DataGrid.Columns>
-				<DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}"/>
-				<DataGridTextColumn Header="Имя" Binding="{Binding FirstName}"/>
-				<DataGridTextColumn Header="Отчество" Binding="{Binding Patronymic}"/>
-				<DataGridTextColumn Header="Пол" Binding="{Binding Gender}"/>
-				<DataGridTextColumn Header="Дата рождения" Binding="{Binding BirthDate}"/>
-				<DataGridTextColumn Header="Дата регистрации" Binding="{Binding RegistrationDate}"/>
-			</DataGrid.Columns>
-		</DataGrid>
-	</Grid>
-
+			<DataGrid Classes="ResultTable" Grid.Row="7" AutoGenerateColumns="False" Items="{Binding Users}"
+					  SelectedItem="{Binding SelectedUser}">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}"/>
+					<DataGridTextColumn Header="Имя" Binding="{Binding FirstName}"/>
+					<DataGridTextColumn Header="Отчество" Binding="{Binding Patronymic}"/>
+					<DataGridTextColumn Header="Пол" Binding="{Binding Gender}"/>
+					<DataGridTextColumn Header="Дата рождения" Binding="{Binding BirthDate}"/>
+					<DataGridTextColumn Header="Дата регистрации" Binding="{Binding RegistrationDate}"/>
+				</DataGrid.Columns>
+			</DataGrid>
+		</Grid>
+	</ScrollViewer>
 </Window>
