--- a/SocialNetwork/SocialNetwork.Client/Views/NoteWindow.axaml
+++ b/SocialNetwork/SocialNetwork.Client/Views/NoteWindow.axaml
@@ -25,7 +25,7 @@
 
 		<TextBox Grid.Row="1" Grid.Column="0" Text="{Binding Name}"/>
 		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Description}"/>
-		<TextBox Grid.Row="1" Grid.Column="2" Text="{Binding CreationDate}"/>
+		<DatePicker x:Name="noteCreationDate" Grid.Row="1" Grid.Column="2" SelectedDateChanged="ChangedNoteCreationDateEvent"/>
 		<TextBox Grid.Row="1" Grid.Column="3" Text="{Binding UserId}"/>
 		<TextBox Grid.Row="1" Grid.Column="4" Text="{Binding GroupId}"/>
 
