--- a/SocialNetwork/SocialNetwork.Client/Views/MainWindow.axaml
+++ b/SocialNetwork/SocialNetwork.Client/Views/MainWindow.axaml
@@ -9,7 +9,7 @@
 
 	<ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
 		
-		<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, *">
+		<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, *">
 
 			<StackPanel Grid.Row="0" Orientation="Vertical">
 				<Label>Группы</Label>
@@ -70,7 +70,7 @@
 			</DataGrid>
 
 			<StackPanel Grid.Row="6" Orientation="Vertical">
-
+				<Label>Пользователи</Label>
 				<StackPanel Orientation="Horizontal">
 					<Button Command="{Binding OnAddUserCommand}">Добавить</Button>
 					<Button Command="{Binding OnChangeUserCommand}">Редактировать</Button>
@@ -88,6 +88,19 @@
 					<DataGridTextColumn Header="Пол" Binding="{Binding Gender}"/>
 					<DataGridTextColumn Header="Дата рождения" Binding="{Binding BirthDate}"/>
 					<DataGridTextColumn Header="Дата регистрации" Binding="{Binding RegistrationDate}"/>
+				</DataGrid.Columns>
+			</DataGrid>
+
+			<StackPanel Grid.Row="8" Orientation="Horizontal">
+				<Label>Группы с максимальным количеством записей</Label>
+			</StackPanel>
+			
+			<DataGrid Classes="ResultTable" Grid.Row="9" AutoGenerateColumns="False" Items="{Binding GroupsWithMaxNotesCount}">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
+					<DataGridTextColumn Header="Описание" Binding="{Binding Description}"/>
+					<DataGridTextColumn Header="Дата создания" Binding="{Binding CreationDate}"/>
+					<DataGridTextColumn Header="Идентификатор создателя" Binding="{Binding UserId}"/>
 				</DataGrid.Columns>
 			</DataGrid>
 		</Grid>
