--- a/TaxiDepo.Client/Views/CarWindow.axaml
+++ b/TaxiDepo.Client/Views/CarWindow.axaml
@@ -4,6 +4,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="TaxiDepo.Client.Views.CarWindow"
-        Title="CarWindow">
-  Welcome to Avalonia!
+		xmlns:vm="using:TaxiDepo.Client.ViewModels"
+        Title="Редактирование группы"
+		SizeToContent="Height"
+		MaxWidth="1000">
+	<Design.DataContext>
+		<vm:CarViewModel/>
+	</Design.DataContext>
+
+	<Window.Styles>
+		<StyleInclude Source="/TaxiDepoStyles.axaml"/>
+	</Window.Styles>
+
+	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, *" ColumnDefinitions="Auto, Auto, Auto, Auto, *">
+		<Label Grid.Row="0" Grid.Column="0">Id</Label>
+		<Label Grid.Row="0" Grid.Column="1">Model</Label>
+		<Label Grid.Row="0" Grid.Column="2">Color</Label>
+		<Label Grid.Row="0" Grid.Column="3">Number</Label>
+		<Label Grid.Row="0" Grid.Column="4">DriverId</Label>
+
+		<TextBox Grid.Row="1" Grid.Column="0" Text="{Binding Id}"/>
+		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding CarModel}"/>
+		<TextBox Grid.Row="1" Grid.Column="2" Text="{Binding CarColor}"/>
+		<TextBox Grid.Row="1" Grid.Column="3" Text="{Binding CarNumber}"/>
+		<TextBox Grid.Row="1" Grid.Column="4" Text="{Binding DriverId}"/>
+
+
+		<StackPanel Grid.Row="2" Orientation="Horizontal">
+			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">OK</Button>
+			<Button IsCancel="True" Click="CancelButton_OnClick">Отмена</Button>
+		</StackPanel>
+	</Grid>
+
+
 </Window>
