--- a/TaxiDepo.Client/Views/DriverWindow.axaml
+++ b/TaxiDepo.Client/Views/DriverWindow.axaml
@@ -4,6 +4,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="TaxiDepo.Client.Views.DriverWindow"
-        Title="DriverWindow">
-  Welcome to Avalonia!
+		xmlns:vm="using:TaxiDepo.Client.ViewModels"
+        Title="Редактирование группы"
+		SizeToContent="Height"
+		MaxWidth="1000">
+	<Design.DataContext>
+		<vm:DriverViewModel/>
+	</Design.DataContext>
+
+	<Window.Styles>
+		<StyleInclude Source="/TaxiDepoStyles.axaml"/>
+	</Window.Styles>
+
+	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, *" ColumnDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, *">
+		<Label Grid.Row="0" Grid.Column="0">Id</Label>
+		<Label Grid.Row="0" Grid.Column="1">Surname</Label>
+		<Label Grid.Row="0" Grid.Column="2">Name</Label>
+		<Label Grid.Row="0" Grid.Column="3">Patronymic</Label>
+		<Label Grid.Row="0" Grid.Column="4">PassportId</Label>
+		<Label Grid.Row="0" Grid.Column="5">Address</Label>
+		<Label Grid.Row="0" Grid.Column="6">PhoneNumber</Label>
+
+
+		<TextBox Grid.Row="1" Grid.Column="0" Text="{Binding Id}"/>
+		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding DriverSurname}"/>
+		<TextBox Grid.Row="1" Grid.Column="2" Text="{Binding DriverName}"/>
+		<TextBox Grid.Row="1" Grid.Column="3" Text="{Binding DriverPatronymic}"/>
+		<TextBox Grid.Row="1" Grid.Column="4" Text="{Binding DriverPassportId}"/>
+		<TextBox Grid.Row="1" Grid.Column="5" Text="{Binding DriverAddress}"/>
+		<TextBox Grid.Row="1" Grid.Column="6" Text="{Binding DriverPhoneNumber}"/>
+
+
+		<StackPanel Grid.Row="2" Orientation="Horizontal">
+			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">OK</Button>
+			<Button IsCancel="True" Click="CancelButton_OnClick">Отмена</Button>
+		</StackPanel>
+	</Grid>
+
+
 </Window>
