--- a/TaxiDepo.Client/Views/UserWindow.axaml
+++ b/TaxiDepo.Client/Views/UserWindow.axaml
@@ -4,6 +4,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="TaxiDepo.Client.Views.UserWindow"
-        Title="UserWindow">
-  Welcome to Avalonia!
+		xmlns:vm="using:TaxiDepo.Client.ViewModels"
+        Title="Редактирование группы"
+		SizeToContent="Height"
+		MaxWidth="1000">
+	<Design.DataContext>
+		<vm:UserViewModel/>
+	</Design.DataContext>
+
+	<Window.Styles>
+		<StyleInclude Source="/TaxiDepoStyles.axaml"/>
+	</Window.Styles>
+
+	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, *" ColumnDefinitions="Auto, Auto, Auto, Auto, Auto, *">
+		<Label Grid.Row="0" Grid.Column="0">Id</Label>
+		<Label Grid.Row="0" Grid.Column="1">Surname</Label>
+		<Label Grid.Row="0" Grid.Column="2">Name</Label>
+		<Label Grid.Row="0" Grid.Column="3">Patronymic</Label>
+		<Label Grid.Row="0" Grid.Column="4">PhoneNumber</Label>
+		<Label Grid.Row="0" Grid.Column="5">AmountRides</Label>
+
+
+		<TextBox Grid.Row="1" Grid.Column="0" Text="{Binding Id}"/>
+		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding UserSurname}"/>
+		<TextBox Grid.Row="1" Grid.Column="2" Text="{Binding UserName}"/>
+		<TextBox Grid.Row="1" Grid.Column="3" Text="{Binding UserPatronymic}"/>
+		<TextBox Grid.Row="1" Grid.Column="4" Text="{Binding UserPhoneNumber}"/>
+		<TextBox Grid.Row="1" Grid.Column="5" Text="{Binding AmountRides}"/>
+		
+
+
+		<StackPanel Grid.Row="2" Orientation="Horizontal">
+			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">OK</Button>
+			<Button IsCancel="True" Click="CancelButton_OnClick">Отмена</Button>
+		</StackPanel>
+	</Grid>
+
+
 </Window>
