--- a/TaxiDepo.Client/TaxiDepoStyles.axaml
+++ b/TaxiDepo.Client/TaxiDepoStyles.axaml
@@ -1,25 +1,10 @@
-﻿﻿<Styles xmlns="https://github.com/avaloniaui"
-	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Design.PreviewWith>
-		<Border Padding="20">
+﻿<Styles xmlns="https://github.com/avaloniaui"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Design.PreviewWith>
+        <Border Padding="20">
+            <!-- Add Controls for Previewer Here -->
+        </Border>
+    </Design.PreviewWith>
 
-		</Border>
-	</Design.PreviewWith>
-
-	<Style Selector="Button.ToolButton">
-		<Setter Property="Width" Value="32"></Setter>
-	</Style>
-
-	<Style Selector="Grid.MainGrid">
-		<Setter Property="Margin" Value="8"/>
-	</Style>
-
-	<Style Selector="TextBox.GroupBox">
-		<Setter Property="Width" Value="30"/>
-		<Setter Property="Height" Value="30"/>
-	</Style>
-
-	<Style Selector="DataGrid.ResultTable">
-		<Setter Property="Margin" Value="0,10,0,10"/>
-	</Style>
+    <!-- Add Styles Here -->
 </Styles>
