--- a/Airlines/Airlines.Client/Views/MainWindow.axaml
+++ b/Airlines/Airlines.Client/Views/MainWindow.axaml
@@ -15,25 +15,73 @@ Title="Airlines.Client">
 	<Window.Styles>
 		<StyleInclude Source="/AirlinesStyles.axaml"/>
 	</Window.Styles>
-	<Grid Classes="MainGrid" RowDefinitions="Auto, *">
-		<StackPanel Grid.Row="0" Orientation="Horizontal">
-			<Button Classes="ToolButton" Command="{Binding OnAddCommand}">
-				<Image Source="/Assets/add.png"/>
-			</Button>
-			<Button Classes="ToolButton" Command="{Binding OnChangeCommand}">
-				<Image Source="/Assets/change.png"/>
-			</Button>
-			<Button Classes="ToolButton" Command="{Binding OnDeleteCommand}">
-				<Image Source="/Assets/delete.png"/>
-			</Button>
-		</StackPanel>
-		<DataGrid Grid.Row="1" AutoGenerateColumns="False"
-			      Items="{Binding Passengers}"
-				  SelectedItem="{Binding SelectedPassenger}">
-			<DataGrid.Columns>
-				<DataGridTextColumn Header="Имя" Binding="{Binding Name}"/>
-			</DataGrid.Columns>
-		</DataGrid>
-	</Grid>
+	<TabControl>
+		<TabItem Header="Ticket" VerticalContentAlignment="Center">
+			<Grid Classes="MainGrid" RowDefinitions="Auto, *">
+				<StackPanel Grid.Row="0" Orientation="Horizontal">
+					<Button Classes="ToolButton" Command="{Binding OnAddTicketCommand}">
+						<Image Source="/Assets/add.png"/>
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnChangeTicketCommand}">
+						<Image Source="/Assets/change.png"/>
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnDeleteTicketCommand}">
+						<Image Source="/Assets/delete.png"/>
+					</Button>
+				</StackPanel>
+				<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+						  Items="{Binding Tickets}"
+						  SelectedItem="{Binding SelectedTicket}">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="Номер билета" Binding="{Binding TicketNumber}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+			</Grid>
+		</TabItem>
+		<TabItem Header="Passenger" VerticalContentAlignment="Center">
+			<Grid Classes="MainGrid" RowDefinitions="Auto, *">
+				<StackPanel Grid.Row="0" Orientation="Horizontal">
+					<Button Classes="ToolButton" Command="{Binding OnAddPassengerCommand}">
+						<Image Source="/Assets/add.png"/>
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnChangePassengerCommand}">
+						<Image Source="/Assets/change.png"/>
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnDeletePassengerCommand}">
+						<Image Source="/Assets/delete.png"/>
+					</Button>
+				</StackPanel>
+				<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+						  Items="{Binding Passengers}"
+						  SelectedItem="{Binding SelectedPassenger}">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="Имя" Binding="{Binding Name}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+			</Grid>
+		</TabItem>
+		<TabItem Header="Airplane" VerticalContentAlignment="Center">
+			<Grid Classes="MainGrid" RowDefinitions="Auto, *">
+				<StackPanel Grid.Row="0" Orientation="Horizontal">
+					<Button Classes="ToolButton" Command="{Binding OnAddAirplaneCommand}">
+						<Image Source="/Assets/add.png"/>
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnChangeAirplaneCommand}">
+						<Image Source="/Assets/change.png"/>
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnDeleteAirplaneCommand}">
+						<Image Source="/Assets/delete.png"/>
+					</Button>
+				</StackPanel>
+				<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+						  Items="{Binding Airplanes}"
+						  SelectedItem="{Binding SelectedAirplane}">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="Модель" Binding="{Binding Model}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+			</Grid>
+		</TabItem>
 
+	</TabControl>
 </Window>
