--- a/Airlines/Airlines.Client/Views/AirplaneWindow.axaml
+++ b/Airlines/Airlines.Client/Views/AirplaneWindow.axaml
@@ -7,7 +7,7 @@
 	xmlns:vm="using:Airlines.Client.ViewModels"
 	Title="Редактирование самолета"
 	MaxWidth="500"
-	SizeToContent="Height">
+	SizeToContent="WidthAndHeight">
 
 	<Design.DataContext>
 		<vm:PassengerViewModel/>
@@ -17,11 +17,16 @@
 		<StyleInclude Source="/AirlinesStyles.axaml"/>
 	</Window.Styles>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto, *" ColumnDefinitions="Auto, *">
-		<Label VerticalAlignment="Center">Модель</Label>
+	<Grid Classes="MainGrid" ColumnDefinitions="Auto,Auto,Auto,Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto"  Margin="4">
+		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Модель</Label>
 		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Model}"/>
-
-		<StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+		<Label  Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Грузоподъемность</Label>
+		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding CarryingCapacity}"/>
+		<Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Производительность</Label>
+		<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Capability}"/>
+		<Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Вместимость</Label>
+		<TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SeatingCapacity}"/>
+		<StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right" Orientation="Horizontal">
 			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">Ok</Button>
 			<Button IsCancel="True" Click="CancelButtonOnClick">Отмена</Button>
