--- a/RentalService.Client/Views/MainWindow.axaml
+++ b/RentalService.Client/Views/MainWindow.axaml
@@ -21,15 +21,15 @@
     
     <Grid RowDefinitions="Auto,*">
         <StackPanel Grid.Row="0" Orientation="Vertical">
-            <StackPanel Grid.Row="0" Orientation="Horizontal">
-                <Button Classes="ToolButton">
-                    <Image Source="/Assets/add.png"/>
+            <StackPanel Orientation="Horizontal">
+                <Button>
+                    Пиздец
                 </Button>
-                <Button Classes="ToolButton">
-                    <Image Source="/Assets/edit.png"/>
+                <Button>
+                    Пиздец
                 </Button>
-                <Button Classes="ToolButton">
-                    <Image Source="/Assets/del.png"/>
+                <Button>
+                    Пиздец
                 </Button>
             </StackPanel>
         </StackPanel>
@@ -39,7 +39,4 @@
             </DataGrid.Columns> 
         </DataGrid>
     </Grid>
-        
-    
-
 </Window>
