--- a/Media/Media.Client/Views/MainWindow.axaml
+++ b/Media/Media.Client/Views/MainWindow.axaml
@@ -16,7 +16,7 @@
 		<StyleInclude Source="/MediaStyles.axaml"/>
 	</Window.Styles>
 	<TabControl>
-		<TabItem Header="Artist" VerticalContentAlignment="Center">
+		<TabItem Header="Артист" VerticalContentAlignment="Center">
 			<Grid Classes="MainGrid" RowDefinitions="Auto, *">
 				<StackPanel Grid.Row="0" Orientation="Horizontal">
 					<Button Classes="ToolButton" Command="{Binding OnAddArtistCommand}">
@@ -39,7 +39,7 @@
 				</DataGrid>
 			</Grid>
 		</TabItem>
-		<TabItem Header="Album" VerticalContentAlignment="Center">
+		<TabItem Header="Альбом" VerticalContentAlignment="Center">
 			<Grid Classes="MainGrid" RowDefinitions="Auto, *">
 				<StackPanel Grid.Row="0" Orientation="Horizontal">
 					<Button Classes="ToolButton" Command="{Binding OnAddAlbumCommand}">
@@ -64,7 +64,7 @@
 				</DataGrid>
 			</Grid>
 		</TabItem>
-		<TabItem Header="Genre" VerticalContentAlignment="Center">
+		<TabItem Header="Жанр" VerticalContentAlignment="Center">
 			<Grid Classes="MainGrid" RowDefinitions="Auto, *">
 				<StackPanel Grid.Row="0" Orientation="Horizontal">
 					<Button Classes="ToolButton" Command="{Binding OnAddGenreCommand}">
@@ -80,6 +80,17 @@
 				<DataGrid Grid.Row="1" AutoGenerateColumns="False"
 							Items="{Binding Genres}"
 							SelectedItem="{Binding SelectedGenre}">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="Имя" Binding="{Binding Name}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+			</Grid>
+		</TabItem>
+		<TabItem Header="Аналитика" VerticalContentAlignment="Center">
+			<Grid Classes="MainGrid" RowDefinitions="Auto, *">
+				<Label>Топ 5 альбомов по продолжительности</Label>
+				<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+							Items="{Binding TopAlbumsList}">
 					<DataGrid.Columns>
 						<DataGridTextColumn Header="Имя" Binding="{Binding Name}"/>
 					</DataGrid.Columns>
