--- a/RentalService.Client/RentalServiceStyles.axaml
+++ b/RentalService.Client/RentalServiceStyles.axaml
@@ -12,6 +12,10 @@
         <Setter Property="Margin" Value="0,5,0,5"></Setter>
     </Style>
     
+    <Style Selector="Button">
+        <Setter Property="Width" Value="100"></Setter>
+    </Style>
+    
     <Style Selector="Grid.MainGrid">
 
         <Setter Property="Margin" Value="10, 0, 10, 10"></Setter>
