--- a/RentalService.Client/Views/ClientWindow.axaml
+++ b/RentalService.Client/Views/ClientWindow.axaml
@@ -5,8 +5,9 @@
         xmlns:vm="using:RentalService.Client.ViewModels"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="RentalService.Client.Views.ClientWindow"
+        Icon="/Assets/client.ico"
         Title="Editing a client"
-        MaxWidth="500"
+        MaxWidth="500" MaxHeight="300"
         SizeToContent="Height">
     
     <Design.DataContext>
@@ -17,12 +18,23 @@
         <StyleInclude Source="/RentalServiceStyles.axaml"></StyleInclude>
     </Window.Styles>
     
-    <Grid RowDefinitions="Auto,*" ColumnDefinitions="Auto, *">
-        <Label VerticalAlignment="Center">LastName</Label>
+    <Grid RowDefinitions="Auto,*,*,*,*,*,*" ColumnDefinitions="Auto, *,*">
+        <Label Grid.Row="0" Grid.Column="0">LastName</Label>
+        <Label Grid.Row="1" Grid.Column="0">FirstName</Label>
+        <Label Grid.Row="2" Grid.Column="0">Patronymic</Label>
+        <Label Grid.Row="3" Grid.Column="0">BirthDate</Label>
+        <Label Grid.Row="4" Grid.Column="0">Passport</Label>
+        
         <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding LastName}"></TextBox>
-        <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button Command="{Binding OkButtonOnClick}">Ok</Button>
-            <Button Click="CancelButton_OnClick">Cancel</Button>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding FirstName}"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Patronymic}"></TextBox>
+        <DatePicker Grid.Row="3" Grid.Column="1" SelectedDate="{Binding BirthDate}"></DatePicker>
+        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Passport}"></TextBox>
+
+        <StackPanel Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Right" Orientation="Horizontal">
+            <Button IsDefault="True" Command="{Binding OkButtonOnClick}">Ok</Button>
+            <Button 
+               IsCancel="True" Click="CancelButton_OnClick">Cancel</Button>
         </StackPanel>
     </Grid>
     
