--- a/RentalService.Client/Views/MainWindow.axaml
+++ b/RentalService.Client/Views/MainWindow.axaml
@@ -21,23 +21,27 @@
     
     <Grid RowDefinitions="Auto,*">
         <StackPanel Grid.Row="0" Orientation="Vertical">
-            <StackPanel Grid.Row="0" Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal">
                 <Button Classes="ToolButton" Command="{Binding OnAddClientCommand}">
                     <Image Source="/Assets/add.png"/>
                 </Button>
-                <Button Classes="ToolButton">
+                <Button Classes="ToolButton" Command="{Binding OnEditClientCommand}">
                     <Image Source="/Assets/edit.png"/>
                 </Button>
-                <Button Classes="ToolButton">
+                <Button Classes="ToolButton" Command="{Binding OnDeleteClientCommand}">
                     <Image Source="/Assets/del.png"/>
                 </Button>
             </StackPanel>
         </StackPanel>
-        <DataGrid Grid.Row="1" AutoGenerateColumns="False" Items="{Binding Clients}" SelectedItem="{Binding SelectedClient}">
+        <DataGrid Grid.Row="1" AutoGenerateColumns="False" 
+                  Items="{Binding Clients}" 
+                  SelectedItem="{Binding SelectedClient}">
             <DataGrid.Columns>
+                <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
                 <DataGridTextColumn Header="LastName" Binding="{Binding LastName}"/>
                 <DataGridTextColumn Header="FirstName" Binding="{Binding FirstName}"/>
                 <DataGridTextColumn Header="Patronymic" Binding="{Binding Patronymic}"/>
+                <DataGridTextColumn Header="BirthDate" Binding="{Binding BirthDate}"/>
                 <DataGridTextColumn Header="Passport" Binding="{Binding Passport}"/>
             </DataGrid.Columns> 
         </DataGrid>
